# Agentic-AI

./: .gitignore  .oai  AGENTBEATS_SETUP_GUIDE.md  CHANGED.md  CHANGELOG.md  COMPONENT_GUIDE.md  DEPLOYMENT_TESTING_GUIDE.md  EDGE_CASE_FIXES.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  GETTING_STARTED.md  GREEN_AGENT_SUMMARY.md  HOWTORUN.md  IMPROVEMENTS.md  MANIFEST.in  QUICKSTART0.md  README copy.md  README.md  TIME_WINDOWS_SUMMARY.md  TUTORIAL.md  agent_card.toml  agentbeats_adapter.py  build_env.md  environment.yml  green-agent-tutorial.md  green_agent_card.toml  green_agent_tools.py  green_agentbeats_adapter.py  legacy_main_README.md  my_red_agent_card.toml  pyproject.toml  red_agent_card.toml  requirements.txt  test.ipynb  test_agents.sh  tutorial-1.md  tutorial.md  verify_fixes.py  whiteAgentReport.md
.history/: .gitignore_20251205165909  HOWTORUN_20251205164903.md  HOWTORUN_20251205165008.md  HOWTORUN_20251210120609.md  QUICK_START_20251210133601.md  QUICK_START_20251210144021.md  agentbeats_adapter_20251205155130.py
agentbeats_v2/: README.md  launcher.py  main.py  run.sh  run_local.sh
agentbeats_v2_white/: README.md  run.sh  run_public.sh
configs/: data_generation.yaml  mdp_env.yaml  oracle.yaml  request_simulation.yaml
dataset/records/: green_tripdata_2025-01.parquet
docs/: README.md  SUMMARY.md  TUTORIAL.md  cli-reference.md  framework_overview.md  implementation_roadmap.md  self_host_instruction.md  system_overview.md
examples/: README.md  compare_agents_large_scale.py  custom_white_agent_example.py  demo_evaluation.py  demo_time_windows.py  evaluate_baselines.py  simulate_requests.py
logs/: events.json
output/: simulated_requests.json
results/: demo_evaluation.json
scenarios/wasp/: setup.sh  (+3 more)
src/: README.md  __init__.py  demo_baselines.py
(+342 files in other folders)
